# rkllm_openai

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python-app.yml
assets/: chat_template.jinja2  gemma-3-it.jinja2  llama-3.2-instruct.jinja2  phi-3.5-mini-instruct.jinja2  qwen3-thinking.jinja2
k8s/: deployment.yaml  namespace.yaml  pvc.yaml  service.yaml
rkllm_openai/: __init__.py  model_manager.py  server.py  templates.py
rkllm_openai/bindings/: __init__.py  constants.py  rkllm.py  structures.py
rkllm_openai/commons/: __init__.py  models.py  prompt_utils.py  response_generators.py  tool_utils.py
tests/: conftest.py  pytest.ini  run_tests.py  test_basic.py  test_bindings.py  test_imports.py  test_model_manager.py  test_openai_api.py  test_openai_endpoints.py  test_server.py  test_server_integration.py  test_server_manual.py  test_tools_templates.py
